This commit contains the following task and fixes :
work item 546667: Temporary workspaces created for stream configuration are not deleted if user credentials are used.
work item 546666: Post build deliver does not fail during connection failure
work item 591619: [Team Concert Plugin] [Java 17 Compile] Migrate compilation from Java 11 to Java 17 and resolve the issue found during migration